# SUPPORT-AI

./: Diagrams.txt  README.md  main.py  pyproject.toml  requirements.txt
app/: main.py
app/core/: config.py  exception_handlers.py  security.py
app/db/: base.py  database.py  session.py
app/dependencies/: auth.py
app/dto/: chat.py  citation.py  escalation.py  escalation_result.py  message.py
app/exceptions/: auth.py  conversation.py  document.py  organization.py  ticket.py
app/integrations/: openai.py
app/models/: __init__.py  conversation.py  document.py  document_chunk.py  knowledge_base.py  message.py  message_feedback.py  mixins.py  organization.py  organization_member.py  ticket.py  ticket_event.py  ticket_note.py  user.py
app/processing/: processor.py
app/processing.py/: chunker.py  processor.py
app/prompts/: customer_support.txt
app/repositories/: base.py  conversation_repository.py  document_chunk_repository.py  document_repository.py  knowledge_base_repository.py  message_feedback_repository.py  message_repository.py  organization_member_repository.py  organization_repository.py  ticket_event_repository.py  ticket_note_repository.py  ticket_repositories.py  user_repository.py
app/schemas/: auth.py  chat.py  conversation.py  document.py  knowledge_base.py  member.py  message_feedback.py  organization.py  ticket.py  ticket_event.py  ticket_note.py  user.py
app/services/: auth_service.py  base.py  chat_services.py  conversation_services.py  document_service.py  (+9 more)
migrations/: env.py
scripts/: test_chat.py  test_embedding.py
(+51 files in other folders)
